@@ -1,3 +1,12 @@
+2000-07-23  Michael Meeks  <michael@helixcode.com>
+
+	* echo-client.c (main): fix severe ref-counting brokenness.
+
+2000-07-22  Michael Meeks  <michael@helixcode.com>
+
+	* echo-client.c (main): cleanings.
+	(init_bonobo): handle orb correctly.
+
 2000-07-12  Michael Meeks  <michael@helixcode.com>
 
 	* echo.c (echo_new): Kill gtk_object_destroy.
@@ -8,7 +17,7 @@
 
 2000-03-26  Miguel de Icaza  <miguel@helixcode.com>
 
-	* README: 
+	* README: add.
 
 2000-04-01  Timur Bakeyev <timur@gnu.org>
 
